<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_logotipo_description"
        app:srcCompat="@drawable/logo_poupa_ceva" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_seicentos_ml"
            android:textColor="@color/primaryLightColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_seiscentos"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/app_hint_beer_price"
            android:inputType="numberDecimal"
            android:textColor="@color/primaryDarkColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_quatrocentos_ml"
            android:textColor="@color/primaryLightColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_quatro_sete_tres"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/app_hint_beer_price"
            android:inputType="numberDecimal"
            android:textColor="@color/primaryDarkColor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_trezentos_ml"
            android:textColor="@color/primaryLightColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_tres_cinco_zero"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/app_hint_beer_price"
            android:inputType="numberDecimal"
            android:textColor="@color/primaryDarkColor"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/app_btn_calcular"
        android:text="@string/app_btn_calcular"
        android:textColor="@color/primaryTextColor" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:text="@string/preco_por_litro"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/primaryDarkColor" />

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_seicentos_ml"
                android:textColor="@color/primaryLightColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPrecoLitroSeiscentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textAlignment="center"
                android:textColor="@color/primaryLightColor"
                android:textStyle="bold"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_quatrocentos_ml"
                android:textColor="@color/primaryLightColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPrecoLitroQuatrocentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textAlignment="center"
                android:textColor="@color/primaryLightColor"
                android:textStyle="bold"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_trezentos_ml"
                android:textColor="@color/primaryLightColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPrecoLitroTrezentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textAlignment="center"
                android:textColor="@color/primaryLightColor"
                android:textStyle="bold"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtComprarEste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</LinearLayout>