<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:text="@string/preco_por_litro"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/primaryDarkColor" />

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/app_seicentos_ml"
                android:textColor="@color/primaryLightColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPrecoLitroSeiscentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textAlignment="center"
                android:textColor="@color/primaryLightColor"
                android:textStyle="bold"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/app_quatrocentos_ml"
                android:textColor="@color/primaryLightColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPrecoLitroQuatrocentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textAlignment="center"
                android:textColor="@color/primaryLightColor"
                android:textStyle="bold"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/app_trezentos_ml"
                android:textColor="@color/primaryLightColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPrecoLitroTrezentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textAlignment="center"
                android:textColor="@color/primaryLightColor"
                android:textStyle="bold"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/txtComprarEste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary" />
</LinearLayout>